created ability to clink on a blog title and view that specific blog post

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -49,6 +49,11 @@ body {
   justify-content: center;
 }
 
+.post-blog-flex {
+  display: flex;
+  align-items: flex-start;;
+}
+
 .cute-pic {
   display: flex;
   justify-content: center;
