added experience and skill files in src, then added it to the home page

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -33,6 +33,11 @@ body {
   height: 100px;
 }
 
+.enter-blog {
+  display: flex;
+  justify-content: flex-end;
+}
+
 .para-flex {
   display: flex;
   justify-content: center;
