--- a/view/src/index.css
+++ b/view/src/index.css
@@ -16,9 +16,36 @@ body {
   height: 100px;
 }
 
+.resume-name {
+  font-size: 35px;
+}
+
+.resume-intro {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
 .resume-header {
   font-size: 35px;
-  color: #565657;
+  font-style: italic;
+}
+
+.company-name {
+  font-size: 23px;
+  font-style: oblique;
+}
+
+.skills-summary {
+  display: flex;
+  justify-content: space-around;
+}
+
+.skills {
+  font-size: 18px;
+  font-weight: normal;
+  line-height: 25px;
+  margin-top: 18px
 }
 
 .linkedin-pic {
