--- a/view/src/index.css
+++ b/view/src/index.css
@@ -150,6 +150,9 @@ body {
 .all-of-posts {
   display: flex;
   flex-direction: column;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-auto-rows: minmax(100px, auto);
 }
 
 .enter-blog {
